# mff-hr-v1

./: .gitignore  Cargo.toml  README.md  a.qoi  build.rs  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
.zed/: settings.json
bitbang-hal-fork/: Cargo.toml  README.md
bitbang-hal-fork/src/: lib.rs  spi.rs
cargo-patch-crate-fork/: Cargo.toml
cargo-patch-crate-fork/src/: lib.rs
patches/: esp-idf-svc+0.49.1.patch
src/: app.rs  errors.rs  littlefs.rs  main.rs  settings.rs  touch.rs
src/heart_rate/: ble.rs  measurement.rs  mod.rs
xpt2046/: Cargo.toml
xpt2046/src/: errors.rs  lib.rs
xpt2046/src/calibration/: mod.rs
xpt2046/src/xpt2046/: mod.rs
xpt2046/src/xpt2046/spi/: mod.rs
