[package]
name = "mff-hr-v1"
version = "0.1.0"
authors = ["nullstalgia <nullstalgia@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mff-hr-v1"
harness = false    # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
bindings_header = "src/bindings.h"

[features]
default = ["std", "embassy", "esp-idf-svc/native", "experimental"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]


[patch.crates-io]
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev = "ad1c836718ad5abf6cf09b155b791d8fe7efd571" }
esp-idf-svc = { path = "./target/patch/ad1c836" }
# esp-idf-svc = { path = "../esp-idf-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", rev = "72f6448c6498fb3f1234db1ff5c59a2febed5ca5" }

# This crate gets patched before build
# [package.metadata.patch]
# crates = ["esp-idf-svc"]

[dependencies]
log = "0.4"
# esp-idf-svc = { version = "0.49", default-features = false }
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev = "ad1c836718ad5abf6cf09b155b791d8fe7efd571", default-features = false }
esp-idf-svc = { path = "./target/patch/ad1c836" }
# esp-idf-svc = { path = "../esp-idf-svc" }
# esp-idf-hal = { version = "0.44", default-features = false }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", rev = "72f6448c6498fb3f1234db1ff5c59a2febed5ca5", default-features = false }
esp-idf-sys = { version = "0.35", default-features = false }
esp32-nimble = "0.8.2"
anyhow = "1.0.93"
bstr = "1.11.0"
embedded-graphics = "0.8.1"
# ili9341 = "0.6.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-hal = "1.0.0"
# For display driver impl, ST7789
mipidsi = "0.8.0"
# For touch screen impl, XPT2046
# xpt2046 = { git = "https://github.com/Yandrik/xpt2046", rev = "8d8cf94" }
xpt2046 = { path = "xpt2046" }
# touchscreen = { git = "https://github.com/witnessmenow/ESP32-Cheap-Yellow-Display", rev = "c1a48ea", package = "touchscreen", features = [
#     "xpt2046",
# ] }
# touchscreen = { path = "touchscreen", features = ["xpt2046"] }
embedded-canvas = "0.3.1"
postcard = "1.0.10"
cstr = "0.2.12"
# embedded-text = { version = "0.7.2", features = ["ansi"] }
# embedded-menu = "0.6.1"
# gfx-xtra = "0.2.0"
kolibri-embedded-gui = "0.0.0-alpha.1"
bitbang-hal = { path = "bitbang-hal-fork" }

[build-dependencies]
embuild = { version = "0.32.0", features = ["espidf"] }
cc = "=1.1.30"                                          # Necessary until a new version of `esp-idf-sys` is released (not my comment)
# patch-crate = "0.1"                                     # Used to `log` -> `::log` in `esp-idf-svc`
patch-crate = { path = "./cargo-patch-crate-fork" }
