[package]
name = "mff-hr-v1"
version = "0.1.0"
authors = ["nullstalgia <nullstalgia@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mff-hr-v1"
harness = false    # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
anyhow = { version = "1.0", default-features = false }
bstr = "1.11.0"
embedded-graphics = "0.8.1"
# ili9341 = "0.6.0"
embedded-canvas = "0.3.1"
postcard = { version = "1.0.10", features = ["use-std"] }
cstr = "0.2.12"
strum = "0.26"
strum_macros = "0.26"
embedded-iconoir = { version = "0.2.3", features = ["24px", "48px"] }
thiserror = { version = "2", default-features = false }
serde = "1.0.215"
serde_derive = "1.0.215"
derivative = "2.2.0"
takeable = "0.2.2"
eg-seven-segment = "0.2.0"
embedded-plots = { git = "https://gitlab.com/mchodzikiewicz/embedded-plots", rev = "ecb86dd5" }
# rand = { version = "0.8.5", default-features = false }
tinybmp = "0.6.0"
u8g2-fonts = "0.4.0"
# memmap = "0.7.0"
tinytga = "0.5.0"
tinyqoi = "0.2.0"
embedded-graphics-simulator = "0.7.0"
