[package]
name = "xpt2046"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-canvas = "0.3.1"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
heapless = "0.8.0"
# log = "0.4.22"
serde = { version = "1.0.215", default-features = false }
serde_derive = "1.0.215"
thiserror = { version = "2", default-features = false }
